--- a/css/style.css
+++ b/css/style.css
@@ -155,17 +155,17 @@
 .botao-facaparte {
     width: 49%;
     height: 3em;
-    background-color: rgba(4, 11, 105, 0.74);
+    background-color: rgba(33, 41, 146, 0.7);
     border: solid 1px;
     border-color: rgba(49, 131, 255, 0.938);
-    box-shadow: 0 0 0 2px rgba(0, 0, 0, 0.795);;
+    box-shadow: 0 0 0 1.5px rgba(0, 0, 0, 0.795);;
     display: flex;
     align-items: center;
     justify-content: center; 
     margin-right: 5%;
 }
 .botao-facaparte:hover {
-    background-color: rgb(7, 14, 109);
+    background-color: rgb(1, 28, 116);
     cursor: pointer;
 }
 .botao-saibamais {
@@ -174,7 +174,7 @@
     background-color: rgba(53, 46, 46, 0.685);
     border: solid 1px;
     border-color: rgba(241, 143, 31, 0.527);
-    box-shadow: 0 0 0 2px rgba(0, 0, 0, 0.795);;
+    box-shadow: 0 0 0 1.5px rgba(0, 0, 0, 0.795);;
     display: flex;
     align-items: center;
     justify-content: center; 
@@ -187,7 +187,7 @@
 /* ------------------------ CONTAINER ------------------------*/
 .container {
     width: 100%;
-    height: 65vh;
+    min-height: 65vh;
     border-top:  solid 3px;
     border-bottom:  solid 3px;
     border-color: rgb(22, 19, 19);
@@ -219,21 +219,40 @@
     color: rgb(255, 247, 232);
     text-shadow: 2px 2px 5px #313131;    
 }
-/* ------------------------ CONTAINER-1 ------------------------*/
-.cont-1 {
+/* ------------ QUEM É A DD [CONTAINER-1] --------------*/
+.img-1 {
     background-image: url('/css/imgs/img7.jpg');
 }
+.position-btn {
+    padding-top: 2%;
+}
+.botao-trajetoria {
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    color: rgb(255, 179, 37);
+    width: 29%;
+    height: 3em;
+    background-color: rgba(189, 21, 21, 0.644);
+    border: solid 1px;
+    border-color: rgb(255, 0, 0);
+    box-shadow: 0 0 0 1.5px rgba(0, 0, 0, 0.795);;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.botao-trajetoria:hover{
+    background-color: rgba(156, 5, 0, 0.993);
+    cursor: pointer;
+}
 
-
-/* ------------------------ CONTAINER-2 ------------------------*/
-.cont-2 {
+/* ------------ World VS World [CONTAINER-2] -------------*/
+.img-2 {
     background-image: url('/css/imgs/img2-2.png');
 }
 
 
-/* ------------------------ CONTAINER-3 ------------------------*/
+/* ----------- Junte-se a nós [CONTAINER-3] -----------*/
 
-.cont-3 {
+.img-3 {
     background-image: url('/css/imgs/img1-1.png');
 }
 .btn-cont-3 {
@@ -244,8 +263,8 @@
     height: 10%;
 }
 
-/* ------------------------ CONTAINER-4 ------------------------*/
-.cont-4 {
+/* ----------- Conheça a STAFF [CONTAINER-4] ------------*/
+.img-4 {
     background-image: url('/css/imgs/img10-1.png');
 }
 .staff {
@@ -327,3 +346,59 @@
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     font-size: 10px;
 }
+
+
+/* -------------------- MODAL -------------------- */
+.no-scroll { /* Faz com que a barra de rolagem da página fique oculta quando o modal estiver visível*/
+    overflow: hidden;
+}
+.modal {
+    display: none; /* Oculta a modal por padrão */
+    position: fixed;
+    z-index: 1000;
+    left: 0;
+    top: 0;
+    max-width: 100%;
+    max-height: 100%;
+    overflow: auto;
+    background-color: rgba(0, 0, 0, 0.459);
+}
+.modal-content {
+    font-size: 1.1em;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    color: rgb(255, 232, 190);
+    text-shadow: 2px 2px 5px #313131;  
+    background-image: url(imgs/book.png);
+    margin-top: 3%;
+    margin-bottom: 3%;
+    margin-left: 10%;
+    margin-right: 10%;
+    padding: 3%;
+    border: 1px solid #000000;
+    overflow: auto;
+    position: block;
+}
+.modal-content h2 {
+    color: #fff1c9;
+    text-align: center;
+    margin-bottom: 2%;
+    font-size: 30px;
+}
+.recuo {
+    text-indent: 3em;
+}
+.close-btn {
+    color: white;
+    float: right;
+    font-size: 32px;
+    font-weight: bold;
+    cursor: pointer;
+}
+
+.close-btn:hover,
+.close-btn:focus {
+    color: rgb(255, 232, 131);
+    text-decoration: none;
+    cursor: pointer;
+}
+
