--- a/css/style.css
+++ b/css/style.css
@@ -11,8 +11,11 @@
     font-weight: 700;
     font-style: normal;
 }
-/* ------------------------ HOME-VIDEO ------------------------*/
+body {
+    position: relative;
+}
 
+/* ------------------------ HOME-VIDEO ------------------------*/
 /*------ VIDEO BACKGROUND [HOME] ------*/
 .home-video { 
     padding-top: 2.1%;;
@@ -188,6 +191,7 @@
 .container {
     width: 100%;
     min-height: 65vh;
+    max-height: 80vh;
     border-top:  solid 3px;
     border-bottom:  solid 3px;
     border-color: rgb(22, 19, 19);
@@ -196,6 +200,7 @@
     background-position: center;
     background-repeat: no-repeat;
     object-fit: contain;
+    padding-bottom: 1%;
 }
 .pad-format {
     padding: 2%;
@@ -267,13 +272,20 @@
 .img-4 {
     background-image: url('/css/imgs/img10-1.png');
 }
-.staff {
+.position-staff-content {
     width: 40%;
+    height: 100%;
+}
+.staff {
+    width: 100%;
 }
 .staff h2 {
     font-family: 'Semplicita Pro', "Open Sans", Arial, Helvetica, sans-serif;
     font-size: 35px;
-    text-shadow: 2px 2px 5px #313131;    
+    text-shadow: 2px 2px 5px #313131;   
+}
+.title-content {
+    padding-right: 3%;
 }
 .staff .guildleaders {
     color: rgb(240, 33, 33);
@@ -298,9 +310,7 @@
 /* ------------------------ FOOTER ------------------------*/
 #footer {
     font-family: 'Semplicita Pro', "Open Sans", Arial, Helvetica, sans-serif;
-
     width: 94%;
-    height: 10%;
     background-color: rgb(9, 9, 12);
     overflow: hidden;
     padding-left: 3%;
@@ -349,11 +359,17 @@
 
 
 /* -------------------- MODAL -------------------- */
-.no-scroll { /* Faz com que a barra de rolagem da página fique oculta quando o modal estiver visível*/
+.modal-dd-logo {
+    position: absolute;
+    width: 10%;
+    left: 45%; 
+    top: 1%;
+}
+.no-scroll {
     overflow: hidden;
 }
 .modal {
-    display: none; /* Oculta a modal por padrão */
+    display: none; /* Oculta o modal por padrão */
     position: fixed;
     z-index: 1000;
     left: 0;
@@ -366,20 +382,20 @@
 .modal-content {
     font-size: 1.1em;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-    color: rgb(255, 232, 190);
+    color: rgb(255, 227, 175);
     text-shadow: 2px 2px 5px #313131;  
     background-image: url(imgs/book.png);
-    margin-top: 3%;
+    margin-top: 5.5%;
     margin-bottom: 3%;
     margin-left: 10%;
     margin-right: 10%;
-    padding: 3%;
+    padding: 5% 3% 3% 3%;
     border: 1px solid #000000;
     overflow: auto;
     position: block;
 }
 .modal-content h2 {
-    color: #fff1c9;
+    color: #fff7df;
     text-align: center;
     margin-bottom: 2%;
     font-size: 30px;
@@ -402,3 +418,17 @@
     cursor: pointer;
 }
 
+
+/* -------------------- ICON BACK TOPO -------------------- */
+.back-to-top-btn {
+    position: fixed;
+    bottom: 2%;
+    right: 1%;
+    cursor: pointer;
+    display: none;
+    z-index: 999;
+    background-color: transparent;
+}
+.back-to-top-btn img {
+    width: 80%;
+}
